<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      app:cardCornerRadius="20dp"
        android:layout_margin="30dp"
        app:cardElevation="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >


            <TextView
                android:id="@+id/tvQTitleFourAns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ماذ يقصد ب علوم الحاسب " />

            <RadioGroup
                android:id="@+id/radio_group_QFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="55dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQTitleFourAns">

                <RadioButton
                    android:id="@+id/rbSelect1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/No"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbSelect2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rarely"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbSelect3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/sometime_1"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbSelect4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/often_3"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbSelect5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/always_4"
                    android:textColor="@color/black"

                    android:textSize="18sp" />

            </RadioGroup>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="50dp"
                android:layout_marginBottom="0dp"
                android:inputType="text"
                android:text="التالى"

                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_QFour" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>