<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNameOfStudent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name_of_student"
        app:boxStrokeColor="@color/base_color"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="MissingConstraints"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nameOfStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutAgeOfStudent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/age_of_student"
        app:boxStrokeColor="@color/base_color"
        app:layout_constraintTop_toBottomOf="@+id/layoutNameOfStudent"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_ageOfStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddNewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:text="@string/add_new_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAgeOfStudent" />


</androidx.constraintlayout.widget.ConstraintLayout>