<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Specialist.ui.Questions.QSpeMichaelType">


    <TextView
        android:id="@+id/tvMichaelMainCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:text=" --"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="الاختبار اللفظي: " />


    <TextView
        android:id="@+id/tvMichTeatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="الاستيعاب السمعي والتذكر"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMichaelMainCategory" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMichTeatName">

        <!--        android:layout_margin="30dp"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvQTitleMicheal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="ماذ يقصد ب علوم الحاسب " />

            <RadioGroup
                android:id="@+id/radio_group_QMicheal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQTitleMicheal">

                <RadioButton
                    android:id="@+id/rbMichealSelect1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/No"
                    android:layout_marginVertical="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbMichealSelect2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rarely"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginVertical="10dp"/>

                <RadioButton
                    android:id="@+id/rbMichealSelect3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sometime_1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginVertical="10dp"/>

                <RadioButton
                    android:id="@+id/rbMichealSelect4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/often_3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginVertical="10dp"/>

                <RadioButton
                    android:id="@+id/rbMichealSelect5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/always_4"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginVertical="10dp"/>

            </RadioGroup>

            <Button
                android:id="@+id/btnNextMicheal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginVertical="50dp"
                android:layout_marginBottom="0dp"
                android:inputType="text"
                android:text="التالى"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_QMicheal" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>